# bias_adjustment

./: .gitignore  LICENSE  README.md  bias_adjustment.py  distributions.py  dqm.py  environment.yml  pyproject.toml  qdm.py  qm.py  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/sample/: fig2_canon2015.py
etc/: dev.yml
sample/: fig2_canon2015.py
scripts/: qm.py
src/bias_adjustment/: __init__.py  bias_adjustment.py  const.py  utils.py
src/bias_adjustment/distributions/: __init__.py  distributions.py
src/bias_adjustment/quantile_mapping/: __init__.py  dqm.py  qdm.py  qm.py
test/: test_qm.py  test_qm_log.py  test_qm_pow_transform.py  test_qm_sim.py  test_qm_wet_day.py
test/input/: obs.csv
tests/: data.py  test_bias_adjustment.py  test_utils.py
tests/distributions/: test_distributions.py
tests/quantile_mapping/: test_qm.py
