[tool.poetry]
name = "bias-adjustment"
version = "1.0.5"
description = "Bias Adjusment by Quantile Mapping"
authors = ["Emilio Gozo <emiliogozo@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/emiliogozo/bias_adjustment"
keywords = ["climatology", "data analysis", "quantile mapping", "bias correction"]
packages = [{include = "bias_adjustment", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
scipy = "^1.9.3"
numpy = "^1.24.3"
conda-lock = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
