[tool.poetry]
name = "bias-adjustment"
version = "1.0.7"
description = "Bias Adjustment by Quantile Mapping"
authors = ["Emilio Gozo <emiliogozo@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/atsuyaourt/bias_adjustment"
keywords = ["climatology", "data analysis", "quantile mapping", "bias correction"]
packages = [{include = "bias_adjustment", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
scipy = "^1.12.0"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
